images for carousel
1000px x 600px 72dpi less than 100 kb

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1795,6 +1795,32 @@
           "optimized": false,
           "height": 208,
           "width": 624
+        },
+        "be4fbac0": {
+          "id": "be4fbac0",
+          "path": "images/carousel-ads.jpg",
+          "output": "images/carousel-ads.jpg",
+          "name": "carousel-ads.jpg",
+          "category": "IMAGE",
+          "size": 349423,
+          "type": "jpg",
+          "initialSize": 349423,
+          "optimized": false,
+          "height": 600,
+          "width": 1500
+        },
+        "26fcb94e": {
+          "id": "26fcb94e",
+          "path": "images/social.jpg",
+          "output": "images/social.jpg",
+          "name": "social.jpg",
+          "category": "IMAGE",
+          "size": 51337,
+          "type": "jpg",
+          "initialSize": 51337,
+          "optimized": false,
+          "height": 600,
+          "width": 1500
         }
       },
       "deploymentHistory": {},
