--- a/prepros.cfg
+++ b/prepros.cfg
@@ -9,6 +9,17 @@
       "name": "MOJO 3.3.5 bootstrap",
       "path": "",
       "files": {
+        "56632976": {
+          "id": "56632976",
+          "path": "news.php",
+          "output": "news.php",
+          "name": "news.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
         "b8f3bc1b": {
           "id": "b8f3bc1b",
           "path": "index.php",
@@ -1821,6 +1832,50 @@
           "optimized": false,
           "height": 600,
           "width": 1500
+        },
+        "f1a0ddc5": {
+          "id": "f1a0ddc5",
+          "path": "about.php",
+          "output": "about.php",
+          "name": "about.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "3f6c5e37": {
+          "id": "3f6c5e37",
+          "path": "packages.php",
+          "output": "packages.php",
+          "name": "packages.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "f3bb5632": {
+          "id": "f3bb5632",
+          "path": "privacy.php",
+          "output": "privacy.php",
+          "name": "privacy.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "5fe97be1": {
+          "id": "5fe97be1",
+          "path": "log.php",
+          "output": "log.php",
+          "name": "log.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
         }
       },
       "deploymentHistory": {},
