--- a/prepros.cfg
+++ b/prepros.cfg
@@ -1794,19 +1794,6 @@
           ],
           "type": "less"
         },
-        "9a0c2e8c": {
-          "id": "9a0c2e8c",
-          "path": "images/mojo_logo_app.png",
-          "output": "images/mojo_logo_app.png",
-          "name": "mojo_logo_app.png",
-          "category": "IMAGE",
-          "size": 32755,
-          "type": "png",
-          "initialSize": 32755,
-          "optimized": false,
-          "height": 208,
-          "width": 624
-        },
         "be4fbac0": {
           "id": "be4fbac0",
           "path": "images/carousel-ads.jpg",
@@ -1876,6 +1863,30 @@
           "imported": false,
           "parents": [],
           "type": "php"
+        },
+        "27688fbe": {
+          "id": "27688fbe",
+          "path": "_/components/php/header.php",
+          "output": "_/components/php/header.php",
+          "name": "header.php",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "php"
+        },
+        "891d0b91": {
+          "id": "891d0b91",
+          "path": "images/misc/mojo_logo.png",
+          "output": "images/misc/mojo_logo.png",
+          "name": "mojo_logo.png",
+          "category": "IMAGE",
+          "size": 32755,
+          "type": "png",
+          "initialSize": 32755,
+          "optimized": false,
+          "height": 208,
+          "width": 624
         }
       },
       "deploymentHistory": {},
