compiled less to css
having trouble!

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -81,14 +81,14 @@
         "7a681334": {
           "id": "7a681334",
           "path": "_/js/bootstrap-min.js",
-          "output": "_/js/bootstrap-min-dist.js",
+          "output": "_/js/bootstrap-min.js",
           "name": "bootstrap-min.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
           "mangle": true,
           "sourceMaps": false,
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "javascript"
@@ -428,7 +428,7 @@
         "06486b75": {
           "id": "06486b75",
           "path": "_/components/less/bootstrap.less",
-          "output": "_/components/css/bootstrap.css",
+          "output": "_/css/bootstrap.css",
           "name": "bootstrap.less",
           "category": "CSS",
           "autoCompile": true,
@@ -437,7 +437,7 @@
           "sourceMaps": false,
           "strictMath": false,
           "strictUnits": false,
-          "customOutput": false,
+          "customOutput": true,
           "imported": false,
           "parents": [],
           "type": "less"
@@ -1800,10 +1800,10 @@
           "output": "images/carousel-ads.jpg",
           "name": "carousel-ads.jpg",
           "category": "IMAGE",
-          "size": 349423,
+          "size": 284664,
           "type": "jpg",
           "initialSize": 349423,
-          "optimized": false,
+          "optimized": true,
           "height": 600,
           "width": 1500
         },
@@ -1813,10 +1813,10 @@
           "output": "images/social.jpg",
           "name": "social.jpg",
           "category": "IMAGE",
-          "size": 51337,
+          "size": 51328,
           "type": "jpg",
           "initialSize": 51337,
-          "optimized": false,
+          "optimized": true,
           "height": 600,
           "width": 1500
         },
@@ -1881,10 +1881,10 @@
           "output": "images/misc/mojo_logo.png",
           "name": "mojo_logo.png",
           "category": "IMAGE",
-          "size": 32755,
+          "size": 28174,
           "type": "png",
           "initialSize": 32755,
-          "optimized": false,
+          "optimized": true,
           "height": 208,
           "width": 624
         }
@@ -1901,7 +1901,7 @@
         "excludePatterns": "Prepros Build, node_modules, .git, .idea, .sass-cache, .hg, .svn, .cache, config.rb, prepros.cfg, .DS_Store, bower_components",
         "autoprefixerBrowsers": "last 4 versions",
         "liveRefreshDelay": 0,
-        "disableImportAutoCompile": true,
+        "disableImportAutoCompile": false,
         "browserFlow": {
           "mouseSync": true,
           "scrollSync": true,
@@ -1952,7 +1952,7 @@
           "segmentToReplace": "coffee, coffeescript, coffeescripts, ls, livescript, livescripts",
           "segmentToReplaceWith": "html",
           "extension": ".html",
-          "outputType": "REPLACE_SEGMENT",
+          "outputType": "RELATIVE_PREPROCESSABLE_FILESDIR",
           "preprocessableFilesDirs": "coffee/\ncoffeescript/\ncoffeescripts/\nls/\nlivescript/\nlivescripts",
           "path": "js/"
         },
@@ -1963,7 +1963,7 @@
           "segmentToReplaceWith": "",
           "types": "",
           "preprocessableFilesDirs": "",
-          "filePrefix": "-dist"
+          "filePrefix": ""
         },
         "compilers": {
           "less": {
